# ai-security-scanner

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  LICENSE  PRO_REPO_SKELETON.md  README.md  SECURITY.md  docker-compose.yml  generate_sample_html.py  generate_sample_report.py  html2pdf.mjs  pageless-pdf.mjs  pyproject.toml  setup.sh
.github/workflows/: docker-publish.yml  security.yml
backend/: Dockerfile  Dockerfile.dev  docker-entrypoint.sh  requirements.txt
backend/app/: cli.py  main.py
backend/app/core/: __init__.py  config.py  curl_parser.py  judge.py  test_data.py
backend/app/features/scanner/: models.py  routes.py  schemas.py  services.py
backend/app/features/scanner/attacks/: __init__.py  base.py  efficiency_analysis.py  encoding_attacks.py  excessive_agency.py  hallucination_detection.py  indirect_injection.py  language_attacks.py  many_shot_jailbreak.py  multi_turn_attacks.py  output_weaponization.py  pii_leaking.py  prompt_extraction.py  prompt_injection.py  rag_poisoning.py  reliability_checks.py  resource_exhaustion.py  retrieval_precision.py  structure_attacks.py  table_parsing.py  tool_abuse.py
backend/app/features/scanner/packs/: __init__.py  discovery.py  protocol.py
backend/app/features/scanner/reporting/: console.py  (+2 more)
backend/templates/: report.html
frontend/: Dockerfile  entrypoint.sh  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  manifest.ts  page.tsx  providers.tsx
frontend/components/: CLIInstructions.tsx  HeroSection.tsx  ResultModal.tsx  ScanProgress.tsx  TerminalUI.tsx  index.ts
frontend/lib/: api.ts  attacks.ts  env.ts  session.ts
frontend/public/: runtime-env.js
frontend/theme/: theme.ts
samples/: sample-audit-report.html
scripts/: generate_enterprise_docs.py  test_rag_documents.py
(+29 files in other folders)
