[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-security-scanner"
version = "1.0.0"
description = "Security scanner for LLM/RAG applications"
authors = ["Musa Abdulai"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
typer = "^0.12.0"
rich = "^13.7.0"
jinja2 = "^3.1.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sse-starlette = "^2.0.0"

[tool.poetry.scripts]
scanner = "backend.app.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
